@@ -1,5 +1,5 @@
 <component name="ProjectRunConfigurationManager">
-  <configuration default="false" name="CLI site:update:joomla [#8]" type="PhpLocalRunConfigurationType" factoryName="PHP Console" path="$PROJECT_DIR$/cli/panopticon.php" scriptParameters="site:update:joomla 12 -vvv">
+  <configuration default="false" name="CLI site:update:joomla [#8]" type="PhpLocalRunConfigurationType" factoryName="PHP Console" path="$PROJECT_DIR$/cli/panopticon.php" scriptParameters="site:update:joomla 8 -vvv">
     <method v="2" />
   </configuration>
 </component>
